별점 분석 추가

--- a/analyze_rating.ipynb
+++ b/analyze_rating.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.font_manager as fm\n"
+    "import matplotlib.font_manager as fm\n",
+    "import seaborn as sns"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "source": [
     "reviews = pd.read_csv('./data/reviews_preprocessed.csv')\n",
     "\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "source": [
     "path = '/Library/Fonts/NanumBarunGothic.otf'\n",
     "font_name = fm.FontProperties(fname=path, size=50).get_name()\n",
@@ -53,7 +54,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 별점 히스토그램 "
+    "### 전체 리뷰 별점 히스토그램 "
    ],
    "metadata": {}
   },
@@ -129,7 +130,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 각 영역별 별점 비교 "
+    "### 전체 리뷰 각 영역별 별점 비교 "
    ],
    "metadata": {}
   },
@@ -158,6 +159,119 @@
       "배송 평균 별점: 4.623941068139963\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 부정적 리뷰 각 영역별 평점"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "negative_reviews = reviews[reviews['sentiment'] == 0] \n",
+    "print(negative_reviews.shape)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(226, 12)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "durability_star_mean = negative_reviews.durability_star.mean()\n",
+    "price_star_mean = negative_reviews.price_star.mean() \n",
+    "design_star_mean = negative_reviews.design_star.mean() \n",
+    "delievery_star_mean = negative_reviews.delievery_star.mean() \n",
+    "\n",
+    "print('내구성 평균 별점:', durability_star_mean)\n",
+    "print('가격 평균 별점:',price_star_mean)\n",
+    "print('디자인 평균 별점:',design_star_mean)\n",
+    "print('배송 평균 별점:',delievery_star_mean)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "내구성 평균 별점: 2.2122641509433962\n",
+      "가격 평균 별점: 2.7216981132075473\n",
+      "디자인 평균 별점: 2.4150943396226414\n",
+      "배송 평균 별점: 2.4150943396226414\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 긍정적 리뷰 각 영역별 평점"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "positive_reviews = reviews[reviews['sentiment'] == 1] \n",
+    "print(positive_reviews.shape)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(8187, 12)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "durability_star_mean = positive_reviews.durability_star.mean()\n",
+    "price_star_mean = positive_reviews.price_star.mean() \n",
+    "design_star_mean = positive_reviews.design_star.mean() \n",
+    "delievery_star_mean = positive_reviews.delievery_star.mean() \n",
+    "\n",
+    "print('내구성 평균 별점:', durability_star_mean)\n",
+    "print('가격 평균 별점:',price_star_mean)\n",
+    "print('디자인 평균 별점:',design_star_mean)\n",
+    "print('배송 평균 별점:',delievery_star_mean)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "내구성 평균 별점: 4.685364931299635\n",
+      "가격 평균 별점: 4.819740325223749\n",
+      "디자인 평균 별점: 4.682969872683726\n",
+      "배송 평균 별점: 4.682969872683726\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 긍정적 리뷰와 부정적 리뷰 길이 비교"
    ],
    "metadata": {}
   }
